# use-case-purchase-tickets

./: .env.example  .gitignore  Makefile  call_queue.py  docker-compose.yml  main.py  pyproject.toml
config/: db.py  rabbitmq.py
db/: models.py
docker/: rabbitmq.Dockerfile
rabbitmq/: consumer.py  queue.py  tickets_queue.py
services/: tickets_service.py
