[tool.poetry]
name = "questions"
version = "0.1.0"
description = ""
authors = ["Lucas Paz <lucas.paz@onearth.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pika = "^1.3.2"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
